--- a/index.css
+++ b/index.css
@@ -197,15 +197,15 @@ body {
 }
 .doc-paitent-section {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
+  /* align-items: center; */
 }
 .doc-paitent-section img {
   max-width: 550px;
   border-radius: 20px;
 }
 .doc-paitent-section .doc-txt {
-  max-width: 550px;
+  max-width: 500px;
 }
 .doctors-section .btn-container {
   width: fit-content;
@@ -263,15 +263,15 @@ body {
 
 .appointment-section {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
+  /* align-items: center; */
   margin-bottom: 120px;
 }
 .appointment-txt {
-  max-width: 550px;
+  max-width: 500px;
 }
 .appointment-img img {
-  max-width: 650px;
+  max-width: 550px;
   border-radius: 20px;
 }
 .appointment-section ul {
@@ -285,7 +285,7 @@ body {
   row-gap: 15px;
 }
 .appointment-section h3 {
-  margin-top: 40px;
+  margin: 40px auto 20px;
 }
 .appointment-section i {
   padding-right: 10px;
@@ -309,7 +309,7 @@ body {
 }
 .testimonial-img {
   position: relative;
-  width: fit-content%;
+  width: fit-content;
   margin-left: 100px;
 }
 .doe {
@@ -351,20 +351,22 @@ body {
   margin: 60px 0px;
 }
 .news-section,
-.reporter,
-.aside-header,
 .article {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
-.news-main {
-  max-width: 700px;
+.news-main,
+.news-main img {
+  max-width: 600px;
 }
 .aside {
   max-width: 40%;
 }
-.reporter {
-  margin-top: 60px;
+.reporter,
+.aside-header {
+  margin: 20px auto 30px;
+  display: flex;
+  justify-content: space-between;
 }
 .reporter div {
   display: flex;
@@ -408,7 +410,7 @@ body {
   font-size: 24px;
 }
 .cm-sn img {
-  margin: 10px 40px 0px 0px;
+  margin: 20px 20px 0px 0px;
   border-radius: 15px;
 }
 
@@ -433,11 +435,12 @@ body {
   margin-top: 100px;
 }
 .form-section {
+  box-sizing: border-box;
   background: white;
   padding: 10px 20px;
   border-radius: 10px;
-  margin: 20px 20px 0px 20px;
-  max-height: 225px;
+  margin: 0px 20px;
+  max-height: 255px;
 }
 .form-section button {
   background-color: #4791ff;
