--- a/index.css
+++ b/index.css
@@ -141,8 +141,6 @@ body {
 .care {
   padding-top: 80px;
 }
-.care h2 {
-}
 .service-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -481,3 +479,18 @@ body {
       --grey: #A9A9A9;
       --background-color: #F5F9FC;
    */
+
+/* responsive css */
+
+@media (max-width: 1200px) {
+  .doc-paitent-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .doc-img img {
+    max-width: 700px;
+  }
+  .doc-txt {
+    max-width: 100%;
+  }
+}
