--- a/index.css
+++ b/index.css
@@ -108,6 +108,7 @@ body {
 }
 .nav-bar img {
   width: 150px;
+  margin: 20px;
 }
 
 /* hero */
@@ -115,6 +116,9 @@ body {
 .hero {
   /* height: 800px; */
   background-color: #e9f8f6;
+}
+.hero-mbl-img {
+  display: none;
 }
 .hero-content {
   padding-top: 50px;
@@ -126,7 +130,7 @@ body {
 }
 .hero-img,
 .hero-text {
-  width: 50%;
+  width: 700px;
   padding: 0px 10px;
 }
 .hero-text h2 {
@@ -138,10 +142,8 @@ body {
 
 /*services/care*/
 
-.care {
-  padding-top: 80px;
-}
-.care h2 {
+.care-section {
+  margin-top: 80px;
 }
 .service-container {
   display: grid;
@@ -153,7 +155,7 @@ body {
 .service {
   max-width: 300px;
   background-color: #feefeb;
-  padding: 30px;
+  padding: 30px 25px;
   border-radius: 20px;
   box-shadow: var(--boxShadow);
   transition: opacity 0.2s linear;
@@ -297,7 +299,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 60px;
+  margin: 60px 15px;
   padding: 60px 0px;
   border-radius: 30px;
 }
@@ -380,7 +382,7 @@ body {
 .reporter p {
   margin-left: 10px;
 }
-.news-main > img {
+.news-main-img img {
   border-radius: 20px;
 }
 .aside-header p {
@@ -424,6 +426,7 @@ body {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr 2fr;
   justify-items: space-between;
+  margin-bottom: 70px;
 }
 .contact {
   margin: 30px 0px;
@@ -432,7 +435,7 @@ body {
   margin-right: 40px;
 }
 .copy-right {
-  margin-top: 100px;
+  padding-bottom: 20px;
 }
 .form-section {
   box-sizing: border-box;
@@ -440,7 +443,7 @@ body {
   padding: 10px 20px;
   border-radius: 10px;
   margin: 0px 20px;
-  max-height: 255px;
+  /* max-height: 255px; */
 }
 .form-section button {
   background-color: #4791ff;
@@ -481,3 +484,364 @@ body {
       --grey: #A9A9A9;
       --background-color: #F5F9FC;
    */
+
+/* responsive css */
+
+@media (max-width: 1200px) {
+  /*doc paitent section*/
+  .doc-paitent-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .doc-img img {
+    max-width: 700px;
+  }
+  .doc-paitent-section .doc-txt {
+    max-width: 850px;
+    text-align: center;
+  }
+  .doc-paitent-section .btn-container {
+    margin: 40px auto 0px auto;
+  }
+  /*appointment section*/
+  .appointment-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .appointment-txt {
+    max-width: 850px;
+    text-align: center;
+  }
+  .appointment-img img {
+    max-width: 700px;
+    margin-top: 40px;
+  }
+  /*testimonial*/
+
+  .testimonial-img {
+    margin: 0px;
+  }
+  .testimony {
+    max-width: 500px;
+  }
+  /*news */
+  .news-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .news-main {
+    max-width: 850px;
+  }
+  .news-main-img {
+    text-align: center;
+  }
+  /* .news-main h3 {
+    margin-bottom: 30px;
+  } */
+  .aside {
+    max-width: 700px;
+    margin-top: 40px;
+  }
+  .reporter {
+    justify-content: space-around;
+    margin: 40px 0px;
+  }
+  /*footer*/
+  .footer-content {
+    grid-template-columns: 2fr 1fr 1fr;
+  }
+  .form-section {
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 992px) {
+  .hero-content {
+    flex-direction: column;
+  }
+  .hero-img {
+    display: none;
+  }
+  .hero-mbl-img {
+    display: block;
+    margin-top: 80px;
+  }
+  .hero-text {
+    max-width: 700px;
+    text-align: center;
+  }
+  .care h2,
+  .care p {
+    max-width: 700px;
+  }
+  .service-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  /*doctors section*/
+  .doc-paitent-section .doc-txt {
+    max-width: 700px;
+  }
+  .doc-services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  /*appointment section*/
+  .appointment-txt {
+    max-width: 700px;
+  }
+
+  /*testimonial-section*/
+  .testimonials {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .testimony {
+    margin: 20px;
+    max-width: 600px;
+  }
+  .jhon-one,
+  .jhon-two,
+  .jane-two,
+  .jane-three {
+    display: none;
+  }
+  #jane {
+    width: 150px;
+    height: 150px;
+    top: 140px;
+    left: 120px;
+  }
+
+  /*news*/
+  .news-main-txt {
+    max-width: 700px;
+  }
+}
+
+@media (max-width: 815px) {
+  .nav-bar {
+    height: 125px;
+  }
+  .nav-bar .links {
+    display: none;
+  }
+  .hero-text {
+    max-width: 550px;
+    margin: 10px;
+  }
+  .hero-mbl-img img {
+    max-width: 500px;
+  }
+  /*resume from here with txt max-width 550px*/
+
+  .care h2,
+  .care p {
+    max-width: 550px;
+  }
+  .doc-paitent-section .doc-txt,
+  .doc-img img {
+    max-width: 550px;
+  }
+  .appointment-txt,
+  .appointment-img img {
+    max-width: 550px;
+  }
+  .testimony {
+    max-width: 550px;
+  }
+  .news-main img {
+    max-width: 550px;
+  }
+  .news-main-txt {
+    max-width: 550px;
+  }
+  .aside {
+    max-width: 500px;
+  }
+  .footer-content {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .footer-grid {
+    margin: 10px;
+  }
+  .footer-grid:nth-last-of-type(1) {
+    max-width: 40%;
+  }
+  .form-section {
+    margin-top: 50px;
+    max-width: 60%;
+  }
+}
+@media (max-width: 635px) {
+  /* between section 80px, section to content 50px */
+  .txt-xl {
+    font-size: 32px;
+    line-height: 30px;
+    font-weight: 600;
+    padding: 20px 0px;
+  }
+  .txt-lg {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 600;
+    padding: 15px 0px;
+  }
+  .txt-md {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 600;
+    padding: 10px 0px;
+  }
+  .txt-sm {
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 300;
+    padding: 5px 0px;
+  }
+  .hero-content,
+  .doc-img,
+  .appointment-img,
+  .news-main-img,
+  .testimonial-img {
+    overflow: hidden;
+  }
+  .hero-text {
+    width: 100%;
+  }
+  .hero-mbl-img,
+  .doc-img img,
+  .appointment-img img,
+  .news-main-img img,
+  .testimonial-img img {
+    max-width: 100%;
+  }
+  .hero-mbl-img img {
+    width: 250px;
+  }
+  .service {
+    max-width: 250px;
+    padding: 15px;
+  }
+  .doctors-section {
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+  .doctors-section .doc-img {
+    margin-bottom: 20px;
+  }
+  .doc-services {
+    margin-bottom: 70px;
+    margin-top: 50px;
+  }
+  .service-container {
+    margin-top: 50px;
+  }
+  .appointment-section {
+    margin-bottom: 70px;
+  }
+  .testimonials {
+    margin-bottom: 0px;
+    margin-top: 20px;
+    padding: 0px;
+  }
+  .testimonial-img .blue-ring {
+    width: 250px;
+  }
+  #jane {
+    width: 75px;
+    height: 75px;
+    top: 100px;
+    left: 80px;
+  }
+  .news {
+    margin-top: 0px;
+  }
+  .news h2 {
+    margin: 80px auto 20px auto;
+  }
+  .reporter {
+    margin: 20px 0px;
+  }
+  .article {
+    display: flex;
+    flex-direction: column;
+  }
+  .article .article-txt {
+    max-width: 350px;
+  }
+  .container-lg {
+    padding: 10px;
+  }
+  .doc-service .service-header,
+  .doc-service .service-content {
+    flex-direction: column;
+  }
+  .form-section {
+    max-width: 80%;
+  }
+}
+@media (max-width: 400px) {
+  .appointment-txt ul {
+    width: fit-content;
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+  .appointment-txt li i {
+    font-size: 16px;
+  }
+  .testimonial-img .blue-ring {
+    display: none;
+  }
+  #jane {
+    position: static;
+    margin-top: 20px;
+  }
+  .article img {
+    margin: 0px;
+  }
+  .footer-grid i {
+    width: 15px;
+    height: 15px;
+  }
+  .form-section {
+    max-width: 95%;
+    margin: 0px;
+  }
+}
+@media (max-width: 300px) {
+  .hero button {
+    padding: 20px 30px;
+  }
+  .aside-header {
+    flex-direction: column;
+  }
+  .aside-header p {
+    margin-top: 20px;
+  }
+}
+
+/* below 400px */
+/* twitter and other icons
+remove blue circle
+checkup features make them list down instead of side by side
+footer WVANG logo decrease width and height
+side article width;
+*/
+
+/* .footer-content {
+    justify-content: space-around;
+  }
+  .footer-content .contacts {
+    width: 100%;
+    text-align: center;
+  }
+  .footer-content i {
+    max-width: 20px;
+  } */
