--- a/index.css
+++ b/index.css
@@ -30,10 +30,18 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: 16px;
+  transition: all 100ms ease-out;
+}
+.btn:hover {
+  scale: 1.025;
 }
 .btn-primary {
   color: var(--primaryColor);
   background: white;
+}
+.btn-primary:hover {
+  background: var(--primaryColor);
+  color: white;
 }
 .btn-container {
   margin: 20px;
@@ -49,6 +57,10 @@ body {
   height: 70px;
   top: 0px;
   z-index: -100;
+  transition: all 200ms linear;
+}
+.btn-background-hover {
+  transform: rotate(0deg) translateX(-1px);
 }
 .btn-secondary {
   background-color: var(--primaryColor);
@@ -102,6 +114,12 @@ body {
 .nav-bar a {
   text-decoration: none;
   color: black;
+  transition: all 100ms linear;
+}
+.nav-bar a:hover {
+  text-decoration: underline var(--primaryColor);
+  text-underline-offset: 10px;
+  color: var(--primaryColor);
 }
 .nav-bar p {
   margin: 10px;
@@ -110,7 +128,46 @@ body {
   width: 150px;
   margin: 20px;
 }
-
+.hb-icon {
+  position: absolute;
+  right: 20px;
+  z-index: 1000;
+  display: none;
+}
+.hb-icon-active {
+  position: fixed;
+}
+.icon-bar {
+  width: 30px;
+  height: 5px;
+  background: black;
+  margin: 5px;
+}
+.hb-menu {
+  height: 100vh;
+  width: 300px;
+  z-index: 800;
+  background-color: white;
+  position: fixed;
+  top: 0px;
+  right: -600px;
+}
+.hb-menu-active {
+  right: 0px;
+}
+.hb-menu .btn-background {
+  right: 0px;
+}
+.hb-links {
+  margin-top: 100px;
+}
+.hb-menu p {
+  margin-top: 40px;
+}
+.hb-menu .btn-container {
+  display: inline-block;
+  margin-top: 30px;
+}
 /* hero */
 
 .hero {
@@ -212,6 +269,9 @@ body {
 .doctors-section .btn-container {
   width: fit-content;
   margin: 40px 0px;
+}
+.doctors-section .contact-us {
+  display: inline-block;
 }
 .doc-services {
   display: grid;
@@ -629,6 +689,9 @@ body {
   }
   .nav-bar .links {
     display: none;
+  }
+  .hb-icon {
+    display: block;
   }
   .hero-text {
     max-width: 550px;
